# robot_lab_2

./: flake.nix  pyproject.toml
python/include/python3.9/: pyconfig.h
python/lib/pkgconfig/: python-3.9-embed.pc  python-3.9.pc
python/lib/python3.9/: _sysconfigdata__linux_x86_64-linux-gnu.py
python/lib/python3.9/config-3.9-x86_64-linux-gnu/: Makefile  Setup.local  config.c
srcs/: bruh.ipynb  lab1.ipynb
